<?xml version="1.0" encoding="utf-8"?>
<com.example.random_joke.presentation.CorrectTextView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/commonDataTextView"
    android:ellipsize="end"
    android:padding="@dimen/small_padding"
    android:background="@color/cardview_light_background"
    android:gravity="center"
    android:textAppearance="@style/TextAppearance.AppCompat.Title"
    tools:text="No favorite items">

</com.example.random_joke.presentation.CorrectTextView>