<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/small_padding"
    android:orientation="horizontal">

    <com.example.random_joke.presentation.CorrectTextView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/commonDataTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ellipsize="end"
        android:padding="@dimen/small_padding"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        tools:text="Some text that will be long enough to break into dots it the end of line">
    </com.example.random_joke.presentation.CorrectTextView>
    
    <com.example.random_joke.presentation.CorrectImageButton
        android:id="@+id/removeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="?selectableItemBackground"
        tools:src="@android:drawable/ic_input_add"
        android:tint="@color/purple_200"
        android:src="@drawable/baseline_favorite_48"
        />

</LinearLayout>